--- a/src/index.css
+++ b/src/index.css
@@ -287,8 +287,8 @@ main {
   box-shadow: var(--shadow-1);
   transition: var(--transition);
   position: relative;
-  width: 370px;
-  height: 400px;
+  width: 100%;
+  height: 450px;
   padding: 20px;
 }
 
@@ -662,9 +662,9 @@ line-height: 1.5;
 }
 
 .modern-text {
-  width: 70%;
+  width: 100%;
   line-height: 1.5;
-  padding: 0 150px;
+  padding: 0 50px;
   margin-top: 150px;
   font-weight: 500;
 }
@@ -679,10 +679,16 @@ color: white;
   position: relative;
   padding-top: 50px;
   padding-right: 10px;
+  margin-top: 150px;
 }
 
 .panel {
   opacity: 30%;
+  /* margin-top: 150px; */
+}
+
+.panel img {
+  width: 100%;
 }
 
 .bullets span {
@@ -813,7 +819,7 @@ min-height:calc(100vh - 62px);
   width: 100%;
   min-width: 750px;
   position: relative;
-  height: 800px;
+  height: 100vh;
   overflow: hidden;
   background-color: black;
 }
@@ -846,16 +852,18 @@ min-height:calc(100vh - 62px);
   margin-bottom: 0.75rem;
 }
 .title {
-  left: 200px;
+
   position: absolute;
   font-family: 'Bungee Outline';
   /* text-align: center; */
-  font-size: 120px;
+  font-size: 80px;
   font-weight: 500;
   text-transform: uppercase;
   color: rgb(228, 227, 227);
   opacity: 100%;
   margin-bottom: 0.75rem;
+  top: 30%;
+  left: 10%;
 }
 .text {
   max-width: 35em;
@@ -996,8 +1004,8 @@ min-height:calc(100vh - 62px);
   box-shadow: var(--shadow-1);
   transition: var(--transition);
   position: relative;
-  width: 240px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
   padding: none;
   border: none;
 }
@@ -1239,4 +1247,133 @@ min-height:calc(100vh - 62px);
 }
 .slick-next::before {
   color: rgb(94, 53, 11) !important;
+}
+
+/* MOBILE SIZE BREAKPOINT */
+@media only screen and (max-width: 550px) {
+
+  .slider-container {
+    display: none;
+  }
+
+  .woods-container {
+    background: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    width:100%;
+    margin-top: 100px;
+    animation: fly-up 1s ease-in-out;
+  }
+
+  .wood-container {
+    display: flex;
+    flex-direction: column;
+    /* align-content:space-between; */
+    width: 80%;
+    position: relative;
+    background: none;
+    margin-top: 0px;
+  }
+
+  .wood-info {
+    width: 100%;
+    size: 10px;
+    padding: 10px;
+  }
+
+  .collections {
+    padding: 5rem 0rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 80%;
+  }
+
+  .modern-container {
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+    width: 100%;
+    padding-bottom: 30px;
+    /* background: var(--white);
+    border-radius: var(--borderRadius);
+    box-shadow: var(--shadow-1); */
+  }
+
+  .modern-text {
+    width: 100%;
+    line-height: 1.5;
+    padding: 0 30px;
+    margin-top: 150px;
+    font-weight: 500;
+  }
+
+  .modern-wrapper::before {
+    content: "";
+    width: 100%;
+    position: absolute;
+    height: 800px;
+    top: -20px;
+    background-color: rgb(212, 175, 55);
+    z-index: -2;
+    transform: skewY(-10deg);
+  }
+
+  .design-container {
+    position: relative;
+    padding-top: 50px;
+    padding-right: 10px;
+    margin: 80px 20px;
+  }
+
+  .popup-inner img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media only screen and (max-width: 780px) {
+  .modern-container {
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+    width: 100%;
+    padding-bottom: 30px;
+    /* background: var(--white);
+    border-radius: var(--borderRadius);
+    box-shadow: var(--shadow-1); */
+  }
+
+  .modern-wrapper::before {
+    content: "";
+    width: 100%;
+    position: absolute;
+    height: 700px;
+    top: -20px;
+    background-color: rgb(212, 175, 55);
+    z-index: -2;
+    transform: skewY(-10deg);
+  }
+
+  .design-container {
+    position: relative;
+    padding-top: 50px;
+    padding-right: 10px;
+    margin: 100px 20px;
+  }
+
+  .title {
+
+    font-size: 80px;
+    font-weight: 100;
+
+  }
+
+  .title {
+    font-size: 60px;
+  }
+
 }
