--- a/src/index.css
+++ b/src/index.css
@@ -296,16 +296,6 @@ main {
   box-shadow: var(--shadow-3);
 }
 
-.tour-price {
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 0.5rem;
-  color: var(--white);
-  letter-spacing: var(--letterSpacing); 
-  background: var(--primary-500);
-  border-top-right-radius: var(--borderRadius);
-}
 .single-tour .img {
   height: 5rem;
   width: 10rem;
@@ -384,28 +374,6 @@ main {
   border-radius: 50%;
   transition: 1s ease-in-out all;
 
-}
-
-.woods-container {
-  background: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-  width:100%;
-  margin-top: 100px;
-  animation: fly-up 1s ease-in-out;
-}
-
-.wood-container {
-  display: flex;
-  flex-direction: row;
-  align-content:space-between;
-  width: 80%;
-  position: relative;
-  background: none;
-  margin-top: 50px;
 }
 
 
@@ -714,6 +682,7 @@ color: white;
   width: 80%;
   /* max-width: 1170px; */
   margin: 0 auto;
+  position: relative;
 }
 .nav-header {
   display: flex;
@@ -759,47 +728,7 @@ color: white;
   height: 280px;
 }
 /* nav at bigger screen size */
-@media screen and (min-width: 992px) {
-  /* hide nav toggle button */
-  .nav-toggle {
-    display: none;
-  }
 
-  .nav-center {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* optional */
-    flex-wrap: wrap;
-  }
-  .nav-header {
-    padding: 0 0;
-  }
-  .nav-link {
-    padding: 0 20px;
-  }
-  /* .nav-link:hover {
-    padding: 0 20px;
-    color: var(--clr-primary-5);
-    background: transparent;
-  } */
-  .nav-icons {
-    display: flex;
-  }
-
-  .nav-link {
-    margin-right: 0.7rem;
-  }
-  .nav-icon {
-    margin-right: 0.7rem;
-    color: var(--clr-primary-5);
-    font-size: 1.2rem;
-    transition: var(--transition);
-  }
-  .nav-icon:hover {
-    color: var(--clr-primary-8);
-  }
-}
 /* set hero to 
 min-height:calc(100vh - 62px);
 */
@@ -817,7 +746,7 @@ min-height:calc(100vh - 62px);
   align-items: center;
   margin: 0;
   width: 100%;
-  min-width: 750px;
+  /* min-width: 750px; */
   position: relative;
   height: 100vh;
   overflow: hidden;
@@ -836,15 +765,8 @@ min-height:calc(100vh - 62px);
   height: 100%;
   transition: var(--transition);
 }
-.hero-img {
-  width: 100%;
-  height: 100%;
-  /* border-radius: 50%; */
-  margin-bottom: 1rem;
-  object-fit: fill;
-  /* border: 4px solid var(--primary-200); */
-  /* box-shadow: var(--shadow-3); */
-}
+
+
 
 .name {
   text-transform: uppercase;
@@ -854,16 +776,15 @@ min-height:calc(100vh - 62px);
 .title {
 
   position: absolute;
-  font-family: 'Bungee Outline';
   /* text-align: center; */
-  font-size: 80px;
+  font-size: 60px;
   font-weight: 500;
   text-transform: uppercase;
-  color: rgb(228, 227, 227);
+  color: black;
   opacity: 100%;
   margin-bottom: 0.75rem;
   top: 30%;
-  left: 10%;
+  left: 15%;
 }
 .text {
   max-width: 35em;
@@ -880,7 +801,7 @@ min-height:calc(100vh - 62px);
 .prev,
 .next {
   position: absolute;
-  top: 300px;
+  top: 50%;
   background: var(--grey-500);
   color: var(--white);
   width: 1.25rem;
@@ -953,14 +874,7 @@ min-height:calc(100vh - 62px);
   
 }
 
-.integration-title {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: column;
-  align-content: center;
-  align-items: center;
-  width: 100%;
-}
+
 
 .collection-title::before {
   content: "";
@@ -1249,6 +1163,16 @@ min-height:calc(100vh - 62px);
   color: rgb(94, 53, 11) !important;
 }
 
+.menu-button {
+  background-color: transparent;
+  border: none;
+  color: black;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 10px;
+  display: none;
+}
+
 /* MOBILE SIZE BREAKPOINT */
 
 
@@ -1283,16 +1207,17 @@ min-height:calc(100vh - 62px);
   }
 
   .title {
-
-    font-size: 80px;
-    font-weight: 100;
-
+    font-size: 50px;
+    left: 5%;
   }
 
+}
+
+@media only screen and (max-width: 620px) {
   .title {
-    font-size: 60px;
+    font-size: 45px;
+    left: 5%;
   }
-
 }
 
 @media only screen and (max-width: 550px) {
@@ -1334,6 +1259,7 @@ min-height:calc(100vh - 62px);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-content: center;
     width: 80%;
   }
 
@@ -1378,4 +1304,7 @@ min-height:calc(100vh - 62px);
     width: 100%;
     height: 100%;
   }
+
+ 
 }
+
