--- a/src/index.css
+++ b/src/index.css
@@ -268,58 +268,7 @@ main {
   justify-content: center;
 }
 
-.tours {
-  padding: 5rem 0;
-  display: grid;
-  gap: 2rem;
-  width: 80%;
-}
 
-.single-tour {
-  margin-top: 30px;
-  margin-left: 20px;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  align-items: center;
-  background: var(--white);
-  border-radius: var(--borderRadius);
-  box-shadow: var(--shadow-1);
-  transition: var(--transition);
-  position: relative;
-  width: 100%;
-  height: 450px;
-  padding: 20px;
-}
-
-.single-tour:hover {
-  box-shadow: var(--shadow-3);
-}
-
-.single-tour .img {
-  height: 5rem;
-  width: 10rem;
-  border: none;
-  border-top-right-radius: var(--borderRadius);
-  border-top-left-radius: var(--borderRadius);
-}
-
-.tour-info {
-  padding: 1rem 1rem;
-  font-size: 15px;
-}
-
-.tour-info h5 {
-  text-align: center;
-  margin-bottom: 1rem;
-  font-weight: 500;
-  line-height: 1.5;
-}
-.tour-info p {
-  margin-bottom: 1.25rem;
-  line-height: 1.5;
-  color: var(--grey-500);
-}
 .info-btn,
 .delete-btn {
   background: transparent;
@@ -845,24 +794,6 @@ min-height:calc(100vh - 62px);
 
 /* ============= Slick Carousel =============== */
 
-.slick-container {
-  margin: 0 auto;
-  margin-top: 10rem;
-  width: 80vw;
-  max-width: 800px;
-  text-align: center;
-}
-.slick-slide img {
-  display: inline-block;
-}
-
-.slick-prev::before {
-  color: var(--primary-500) !important;
-}
-.slick-next::before {
-  color: var(--primary-500) !important;
-}
-
 .integration-hero {
   display: flex;
   flex-direction: column;
@@ -938,6 +869,7 @@ min-height:calc(100vh - 62px);
   align-content: center;
   align-items: center;
   width: 100%;
+  margin: 100px 0;
 }
 
 .partner_container {
@@ -989,6 +921,11 @@ min-height:calc(100vh - 62px);
   /* background-color: #f0f0f0; */
 }
 
+.person-img {
+  width: 100px;
+  height: 50px;
+}
+
 
 .testimonials::before {
   content: "";
@@ -1021,10 +958,6 @@ min-height:calc(100vh - 62px);
   font-weight: 700;
 }
 
-.slick-container h2 {
-  font-weight: 700;
-  margin: 30px;
-}
 
 .testimonials {
   padding: 5rem 0rem;
@@ -1137,32 +1070,6 @@ min-height:calc(100vh - 62px);
 }
 
 
-.slick-container {
-  margin: 0 auto;
-  margin-top: 4rem;
-  margin-bottom: 4rem;
-  width: 100%;
-  /* max-width: 1200px; */
-  text-align: center;
-}
-.slick-slide img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  display: inline-block;
-}
-
-.icon {
-  color: rgb(94, 53, 11);
-}
-
-.slick-prev::before {
-  color: rgb(94, 53, 11) !important;
-}
-.slick-next::before {
-  color: rgb(94, 53, 11) !important;
-}
-
 .menu-button {
   background-color: transparent;
   border: none;
@@ -1209,6 +1116,20 @@ min-height:calc(100vh - 62px);
   .title {
     font-size: 50px;
     left: 5%;
+  }
+
+  .footer {
+    height: 800px;
+  }
+
+  .footer-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 80%;
+    /* max-width: 1200px; */
+    margin: 0 auto;
+    z-index: -2;
   }
 
 }
@@ -1305,6 +1226,10 @@ min-height:calc(100vh - 62px);
     height: 100%;
   }
 
+  .person-img {
+    width: 70px;
+    height: 30px;
+  }
  
 }
 
