--- a/src/index.css
+++ b/src/index.css
@@ -1230,6 +1230,12 @@ min-height:calc(100vh - 62px);
     width: 70px;
     height: 30px;
   }
+
+  .partners_container {
+  
+    margin: 30px 0;
+  
+  }
  
 }
 
