--- a/src/index.css
+++ b/src/index.css
@@ -1236,6 +1236,12 @@ min-height:calc(100vh - 62px);
     margin: 30px 0;
   
   }
+
+  .office-map {
+    width: 250px;
+    height: 180px; /* Adjust the height of the map as needed */
+    z-index: 1;
+  }
  
 }
 
