update  privacy link

--- a/src/index.css
+++ b/src/index.css
@@ -961,7 +961,7 @@ min-height:calc(100vh - 62px);
   padding: 30px;
   text-align: center;
   height: 450px;
-  z-index: -2;
+  /* z-index: -2; */
 }
 
 .footer-content {
@@ -970,7 +970,7 @@ min-height:calc(100vh - 62px);
   width: 80%;
   /* max-width: 1200px; */
   margin: 0px auto;
-  z-index: -2;
+  /* z-index: -2; */
 
 }
 
@@ -1056,7 +1056,7 @@ min-height:calc(100vh - 62px);
     width: 80%;
     /* max-width: 1200px; */
     margin: 0 auto;
-    z-index: -2;
+    /* z-index: -2; */
   }
 
 }
